python/rregadmin/secdesc/aclist_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.secdesc.acentry_wrapper -r ^ACList -r ^aclist_.* -r ^security_acl_revision -o aclist_wrapper.py aclist_wrapper.xml'
from ctypes import *

from rregadmin.util.glib_wrapper import guint16
from rregadmin.secdesc.acentry_wrapper import guint32
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
STRING = c_char_p
from rregadmin.secdesc.acentry_wrapper import guint8
from rregadmin.secdesc.acentry_wrapper import gssize
from rregadmin.secdesc.acentry_wrapper import gboolean
from rregadmin.secdesc.acentry_wrapper import ACEntry
from rregadmin.util.glib_wrapper import gint8
from rregadmin.secdesc.acentry_wrapper import GByteArray



# values for enumeration 'security_acl_revision'
ACLIST_REVISION_NT4 = 2
ACLIST_REVISION_ADS = 4
security_acl_revision = c_int # enum
aclist_rev = guint16
aclist_acentry_count = guint32
# ../../../rregadmin/secdesc/aclist.h 64
class ACList_(Structure):
    pass
ACList = ACList_
# ../../../rregadmin/secdesc/aclist.h 70
aclist_new = _libraries['librregadmin.so.1'].aclist_new
aclist_new.restype = POINTER(ACList)
# aclist_new()
aclist_new.argtypes = []
aclist_new.__doc__ = \
"""ACList * aclist_new()
../../../rregadmin/secdesc/aclist.h:70"""
# ../../../rregadmin/secdesc/aclist.h 76
aclist_new_parse_sddl = _libraries['librregadmin.so.1'].aclist_new_parse_sddl
aclist_new_parse_sddl.restype = POINTER(ACList)
# aclist_new_parse_sddl(in_str)
aclist_new_parse_sddl.argtypes = [POINTER(STRING)]
aclist_new_parse_sddl.__doc__ = \
"""ACList * aclist_new_parse_sddl(unknown * * in_str)
../../../rregadmin/secdesc/aclist.h:76"""
# ../../../rregadmin/secdesc/aclist.h 82
aclist_new_parse_sddl_quick = _libraries['librregadmin.so.1'].aclist_new_parse_sddl_quick
aclist_new_parse_sddl_quick.restype = POINTER(ACList)
# aclist_new_parse_sddl_quick(in_str)
aclist_new_parse_sddl_quick.argtypes = [STRING]
aclist_new_parse_sddl_quick.__doc__ = \
"""ACList * aclist_new_parse_sddl_quick(unknown * in_str)
../../../rregadmin/secdesc/aclist.h:82"""
# ../../../rregadmin/secdesc/aclist.h 90
aclist_new_parse_binary = _libraries['librregadmin.so.1'].aclist_new_parse_binary
aclist_new_parse_binary.restype = POINTER(ACList)
# aclist_new_parse_binary(in_data, in_size)
aclist_new_parse_binary.argtypes = [POINTER(guint8), POINTER(gssize)]
aclist_new_parse_binary.__doc__ = \
"""ACList * aclist_new_parse_binary(unknown * in_data, gssize * in_size)
../../../rregadmin/secdesc/aclist.h:90"""
# ../../../rregadmin/secdesc/aclist.h 96
aclist_copy = _libraries['librregadmin.so.1'].aclist_copy
aclist_copy.restype = POINTER(ACList)
# aclist_copy(in_aclist)
aclist_copy.argtypes = [POINTER(ACList)]
aclist_copy.__doc__ = \
"""ACList * aclist_copy(unknown * in_aclist)
../../../rregadmin/secdesc/aclist.h:96"""
# ../../../rregadmin/secdesc/aclist.h 102
aclist_free = _libraries['librregadmin.so.1'].aclist_free
aclist_free.restype = gboolean
# aclist_free(in_aclist)
aclist_free.argtypes = [POINTER(ACList)]
aclist_free.__doc__ = \
"""gboolean aclist_free(ACList * in_aclist)
../../../rregadmin/secdesc/aclist.h:102"""
# ../../../rregadmin/secdesc/aclist.h 109
aclist_get_rev = _libraries['librregadmin.so.1'].aclist_get_rev
aclist_get_rev.restype = aclist_rev
# aclist_get_rev(in_aclist)
aclist_get_rev.argtypes = [POINTER(ACList)]
aclist_get_rev.__doc__ = \
"""aclist_rev aclist_get_rev(unknown * in_aclist)
../../../rregadmin/secdesc/aclist.h:109"""
# ../../../rregadmin/secdesc/aclist.h 115
aclist_set_rev = _libraries['librregadmin.so.1'].aclist_set_rev
aclist_set_rev.restype = gboolean
# aclist_set_rev(in_aclist, in_rev)
aclist_set_rev.argtypes = [POINTER(ACList), aclist_rev]
aclist_set_rev.__doc__ = \
"""gboolean aclist_set_rev(ACList * in_aclist, aclist_rev in_rev)
../../../rregadmin/secdesc/aclist.h:115"""
# ../../../rregadmin/secdesc/aclist.h 121
aclist_get_acentry_count = _libraries['librregadmin.so.1'].aclist_get_acentry_count
aclist_get_acentry_count.restype = aclist_acentry_count
# aclist_get_acentry_count(in_aclist)
aclist_get_acentry_count.argtypes = [POINTER(ACList)]
aclist_get_acentry_count.__doc__ = \
"""aclist_acentry_count aclist_get_acentry_count(unknown * in_aclist)
../../../rregadmin/secdesc/aclist.h:121"""
# ../../../rregadmin/secdesc/aclist.h 127
aclist_push_acentry = _libraries['librregadmin.so.1'].aclist_push_acentry
aclist_push_acentry.restype = gboolean
# aclist_push_acentry(in_aclist, in_entry)
aclist_push_acentry.argtypes = [POINTER(ACList), POINTER(ACEntry)]
aclist_push_acentry.__doc__ = \
"""gboolean aclist_push_acentry(ACList * in_aclist, ACEntry * in_entry)
../../../rregadmin/secdesc/aclist.h:127"""
# ../../../rregadmin/secdesc/aclist.h 133
aclist_pop_acentry = _libraries['librregadmin.so.1'].aclist_pop_acentry
aclist_pop_acentry.restype = gboolean
# aclist_pop_acentry(in_aclist)
aclist_pop_acentry.argtypes = [POINTER(ACList)]
aclist_pop_acentry.__doc__ = \
"""gboolean aclist_pop_acentry(ACList * in_aclist)
../../../rregadmin/secdesc/aclist.h:133"""
# ../../../rregadmin/secdesc/aclist.h 139
aclist_get_acentry = _libraries['librregadmin.so.1'].aclist_get_acentry
aclist_get_acentry.restype = POINTER(ACEntry)
# aclist_get_acentry(in_aclist, in_index)
aclist_get_acentry.argtypes = [POINTER(ACList), gint8]
aclist_get_acentry.__doc__ = \
"""unknown * aclist_get_acentry(unknown * in_aclist, gint8 in_index)
../../../rregadmin/secdesc/aclist.h:139"""
# ../../../rregadmin/secdesc/aclist.h 145
aclist_compare = _libraries['librregadmin.so.1'].aclist_compare
aclist_compare.restype = c_int
# aclist_compare(aclist1, aclist2)
aclist_compare.argtypes = [POINTER(ACList), POINTER(ACList)]
aclist_compare.__doc__ = \
"""int aclist_compare(unknown * aclist1, unknown * aclist2)
../../../rregadmin/secdesc/aclist.h:145"""
# ../../../rregadmin/secdesc/aclist.h 151
aclist_equal = _libraries['librregadmin.so.1'].aclist_equal
aclist_equal.restype = gboolean
# aclist_equal(aclist1, aclist2)
aclist_equal.argtypes = [POINTER(ACList), POINTER(ACList)]
aclist_equal.__doc__ = \
"""gboolean aclist_equal(unknown * aclist1, unknown * aclist2)
../../../rregadmin/secdesc/aclist.h:151"""
# ../../../rregadmin/secdesc/aclist.h 157
aclist_to_binary = _libraries['librregadmin.so.1'].aclist_to_binary
aclist_to_binary.restype = POINTER(GByteArray)
# aclist_to_binary(in_aclist, in_block_size)
aclist_to_binary.argtypes = [POINTER(ACList), gssize]
aclist_to_binary.__doc__ = \
"""GByteArray * aclist_to_binary(unknown * in_aclist, gssize in_block_size)
../../../rregadmin/secdesc/aclist.h:157"""
# ../../../rregadmin/secdesc/aclist.h 164
aclist_write_to_binary = _libraries['librregadmin.so.1'].aclist_write_to_binary
aclist_write_to_binary.restype = gboolean
# aclist_write_to_binary(in_aclist, in_arr, in_block_size)
aclist_write_to_binary.argtypes = [POINTER(ACList), POINTER(GByteArray), gssize]
aclist_write_to_binary.__doc__ = \
"""gboolean aclist_write_to_binary(unknown * in_aclist, GByteArray * in_arr, gssize in_block_size)
../../../rregadmin/secdesc/aclist.h:164"""
# ../../../rregadmin/secdesc/aclist.h 170
aclist_to_sddl = _libraries['librregadmin.so.1'].aclist_to_sddl
aclist_to_sddl.restype = STRING
# aclist_to_sddl(in_aclist)
aclist_to_sddl.argtypes = [POINTER(ACList)]
aclist_to_sddl.__doc__ = \
"""unknown * aclist_to_sddl(unknown * in_aclist)
../../../rregadmin/secdesc/aclist.h:170"""
# ../../../rregadmin/secdesc/aclist.h 178
aclist_allocation_count = _libraries['librregadmin.so.1'].aclist_allocation_count
aclist_allocation_count.restype = guint32
# aclist_allocation_count()
aclist_allocation_count.argtypes = []
aclist_allocation_count.__doc__ = \
"""guint32 aclist_allocation_count()
../../../rregadmin/secdesc/aclist.h:178"""
ACList_._fields_ = [
    # ../../../rregadmin/secdesc/aclist.h 64
]
__all__ = ['aclist_to_binary', 'aclist_pop_acentry',
           'aclist_new_parse_sddl', 'ACLIST_REVISION_ADS',
           'aclist_rev', 'ACList', 'aclist_acentry_count',
           'aclist_copy', 'aclist_allocation_count', 'aclist_new',
           'aclist_write_to_binary', 'aclist_get_acentry_count',
           'aclist_equal', 'security_acl_revision', 'aclist_get_rev',
           'ACList_', 'aclist_to_sddl', 'ACLIST_REVISION_NT4',
           'aclist_compare', 'aclist_get_acentry',
           'aclist_push_acentry', 'aclist_free',
           'aclist_new_parse_sddl_quick', 'aclist_set_rev',
           'aclist_new_parse_binary']
